...

        <TextView
            android:id="@+id/tvCourseSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Subject: "
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Description"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp" />

        <TextView
            android:id="@+id/tvAverageOverall"
            android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Average Workload: No reviews yet"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnViewReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="View Reviews" />

        <Button
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Join Course Chat"/>

        <Button
            android:id="@+id/btnEditCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Edit Course" />

        <Button
            android:id="@+id/btnDeleteCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Delete Course" />

    </LinearLayout>
...
